playing with the radial-gradients

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,49 +2,48 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-  --text-color-default: 0, 0, 0;
-}
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
+    --text-color-default: 0, 0, 0;
+  }
 
-.theme-alternate {
-  --foreground-rgb: 255, 255, 255;
-  --background-start-rgb: 0, 0, 0;
-  --background-end-rgb: 0, 0, 0;
-  --text-color-accent: 90, 200, 140;
-}
-
-.theme-yellow {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 255, 255, 0;
-  --background-end-rgb: 255, 255, 0;
-  --text-color-accent: 155, 200, 90;
-}
-
-.theme-purple {
-  --foreground-rgb: 255, 255, 255;
-  --background-start-rgb: 255, 0, 255;
-  --background-end-rgb: 255, 0, 255;
-  --text-color-accent: 230, 45, 2000;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
+  .theme-alternate {
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
-    --text-color-accent: 255, 45, 90;
+    --text-color-accent: 90, 200, 140;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  .theme-yellow {
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 255, 255, 0;
+    --background-end-rgb: 255, 255, 0;
+    --text-color-accent: 155, 200, 90;
+  }
+
+  .theme-purple {
+    --foreground-rgb: 255, 255, 255;
+    --background-start-rgb: 255, 0, 255;
+    --background-end-rgb: 255, 0, 255;
+    --text-color-accent: 230, 45, 2000;
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --foreground-rgb: 255, 255, 255;
+      --background-start-rgb: 35, 0, 35;
+      --background-end-rgb: 0, 0, 0;
+      --text-color-accent: 255, 45, 90;
+    }
+  }
+
+  body {
+    color: rgb(var(--foreground-rgb));
+    background: radial-gradient(ellipse at top left,
+        transparent,
+        rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  }
 }
