--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,7 @@
   }
 
   body {
+    min-height: 100vh;
     color: rgb(var(--foreground-rgb));
     background: radial-gradient(ellipse at top left,
         transparent,
